# Ludiglot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  pyproject.toml  run.bat  run.ps1  run_mvp.cmd  run_mvp.ps1  setup.bat  setup.ps1  test_smart_match.py
PrivateDevDoc/: Project.md  VoicePlayMode.md  WindowsOCR.md
cache/: .gitkeep
config/: settings.example.json
data/: .gitkeep
docs/: CRITICAL_BUG_FIX.md  DataManagement.md  FIX_REPORT_2026-01-23_v2.md  FIX_REPORT_2026-01-24.md  OCR_GROUPING_TEST_REPORT.md  PROGRESS_SUMMARY.py  README.md  REMAINING_TASKS.md  TEST_REPORT_2026-01-24.md
tests/: test_app_shell_wiring.py  test_audio_cache_index.py  test_audio_controls_presenter.py  test_audio_mock.py  test_audio_playback_orchestrator.py  test_audio_playback_ui_controller.py  test_audio_player_boundary.py  test_audio_resolver.py  test_capture_input.py  test_capture_match_workflow.py  test_cli_lazy_gui_imports.py  test_database_update_controller.py  test_db_update_workflow.py  test_display_shaper.py  test_game_pak_update_plan.py  test_hotkey_adapters.py  test_hotkey_registrar.py  test_ocr_pipeline.py  test_output_seq.txt  test_overlay_audio_runtime.py  test_overlay_capture_session.py  test_overlay_database_update_wiring.py  test_overlay_hotkey_wiring.py  test_overlay_result_presentation_wiring.py  test_overlay_runtime.py  test_preferences.py  test_result_presentation_controller.py  test_selection_geometry.py  test_terminal_log_tee.py  test_text_builder_blob_map.py  test_text_matcher.py  test_voice_event_index.py  (+1 more)
(+135 files in other folders)
