[project]
name = "ludiglot"
version = "0.0.1"
description = "Immersive Language Learning Tool for Wuthering Waves"
requires-python = ">=3.10"
dependencies = [
	"rapidfuzz>=3.0",
	"pytesseract>=0.3.10",
	"pillow>=10.0",
	"playsound==1.2.2",
	"mss>=9.0.0",
	"pywin32>=306",
	"PyQt6>=6.6",
	"pynput>=1.7",
	# Windows OCR dependencies (optional but recommended)
	"winrt-Windows.Media.Ocr>=3.2.0",
	"winrt-Windows.Globalization>=3.2.0",
	"winrt-Windows.Storage.Streams>=3.2.0",
	"winrt-Windows.Graphics.Imaging>=3.2.0",
	"winrt-Windows.Foundation>=3.2.0",
	"winrt-Windows.Foundation.Collections>=3.2.0",
]

[project.optional-dependencies]
paddle = [
	"paddleocr>=3.4.0",
	"paddlepaddle>=3.2,<3.3",
]

[project.scripts]
ludiglot = "ludiglot.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
